# DevOps-Course-Starter

./: .dockerignore  .env.template  .gitignore  README.md  Vagrantfile  app.py  appbkp.py  docker-compose.yaml  dockerfile  excersize_1_pull_test  flask_config.py  logs.txt  pyproject.toml  requirements.txt  session_items.py  test_a.py  test_app_integration.py  todo_item.py  trello_items.py
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
ToDo/: trello_items.py
templates/: index.html
todo_app/: dockerfile
todo_app/data/: trello_items.py
